--- a/K53_Controls_Test/heavy_vehicle_controls.html
+++ b/K53_Controls_Test/heavy_vehicle_controls.html
@@ -31,7 +31,7 @@
 		<div class="section" id="p1">
 			<span class="name">1</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/truck.jpg"></a>
 		</div>
 		<div class="btext">
@@ -58,7 +58,7 @@
 		<div class="section" id="p2">
 			<span class="name">2</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/truck.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -86,7 +86,7 @@
 		<div class="section" id="p3">
 			<span class="name">3</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/truck.jpg"></a>
 		</div>	
 				<div class="btext">
@@ -116,7 +116,7 @@
 		<div class="section" id="p4">
 			<span class="name">4</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/truck.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -147,7 +147,7 @@
 		<div class="section" id="p5">
 			<span class="name">5</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/truck.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -178,7 +178,7 @@
 		<div class="section" id="p6">
 			<span class="name">6</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/truck.jpg"></a>
 		</div>		
 		<div class="btext">
@@ -209,7 +209,7 @@
 		<div class="section" id="p7">
 			<span class="name">7</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/truck.jpg"></a>
 		</div>
 		<div class="btext">
@@ -239,7 +239,7 @@
 		<div class="section" id="p8">
 			<span class="name">8</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/truck.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -269,7 +269,7 @@
 		<div class="section" id="p9">
 			<span class="name">9</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/truck.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -300,7 +300,7 @@
 		<div class="section" id="p10">
 			<span class="name">10</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/truck.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -329,7 +329,7 @@
 		<div class="section" id="p11">
 			<span class="name">11</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/truck.jpg"></a>
 		</div>
 		<div class="btext">
@@ -359,7 +359,7 @@
 		<div class="section" id="p12">
 			<span class="name">12</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/truck.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -388,7 +388,7 @@
 		<div class="section" id="p13">
 			<span class="name">13</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/truck.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -417,7 +417,7 @@
 		<div class="section" id="p14">
 			<span class="name">14</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/truck.jpg"></a>
 		</div>
 		<div class="btext">
@@ -445,7 +445,7 @@
 		<div class="section" id="p15">
 			<span class="name">15</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/truck.jpg"></a>
 		</div>	
 		<div class="btext">
