--- a/K53_Controls_Test/light_vehicle_controls.html
+++ b/K53_Controls_Test/light_vehicle_controls.html
@@ -37,7 +37,7 @@
 		<div class="section" id="p1">
 			<span class="name">1</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/car.jpg"></a>
 		</div>
 		<div class="btext">
@@ -65,7 +65,7 @@
 		<div class="section" id="p2">
 			<span class="name">2</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/car.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -93,7 +93,7 @@
 		<div class="section" id="p3">
 			<span class="name">3</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/car.jpg"></a>
 		</div>	
 				<div class="btext">
@@ -123,7 +123,7 @@
 		<div class="section" id="p4">
 			<span class="name">4</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/car.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -154,7 +154,7 @@
 		<div class="section" id="p5">
 			<span class="name">5</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/car.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -187,7 +187,7 @@
 		<div class="section" id="p6">
 			<span class="name">6</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/car.jpg"></a>
 		</div>		
 		<div class="btext">
@@ -218,7 +218,7 @@
 		<div class="section" id="p7">
 			<span class="name">7</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/car.jpg"></a>
 		</div>
 		<div class="btext">
@@ -248,7 +248,7 @@
 		<div class="section" id="p8">
 			<span class="name">8</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/car.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -278,7 +278,7 @@
 		<div class="section" id="p9">
 			<span class="name">9</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/car.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -309,7 +309,7 @@
 		<div class="section" id="p10">
 			<span class="name">10</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/car.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -337,7 +337,7 @@
 		<div class="section" id="p11">
 			<span class="name">11</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/car.jpg"></a>
 		</div>
 		<div class="btext">
@@ -367,7 +367,7 @@
 		<div class="section" id="p12">
 			<span class="name">12</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/car.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -396,7 +396,7 @@
 		<div class="section" id="p13">
 			<span class="name">13</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/car.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -425,7 +425,7 @@
 		<div class="section" id="p14">
 			<span class="name">14</span>
 		</div>
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="../img/car.jpg"></a>
 		</div>
 		<div class="btext">
