--- a/K53_Controls_Test/motorcycle_controls.html
+++ b/K53_Controls_Test/motorcycle_controls.html
@@ -34,7 +34,7 @@
 		<div class="section" id="p1">
 			<span class="name">1</span>
 		</div>
-		<div class="pss">
+		<div class="pssmotor">
 			<a ><img src="../img/bike.jpg"></a>
 		</div>
 		<div class="btext">
@@ -61,7 +61,7 @@
 		<div class="section" id="p2">
 			<span class="name">2</span>
 		</div>
-		<div class="pss">
+		<div class="pssmotor">
 			<a ><img src="../img/bike.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -89,7 +89,7 @@
 		<div class="section" id="p3">
 			<span class="name">3</span>
 		</div>
-		<div class="pss">
+		<div class="pssmotor">
 			<a ><img src="../img/bike.jpg"></a>
 		</div>	
 				<div class="btext">
@@ -119,7 +119,7 @@
 		<div class="section" id="p4">
 			<span class="name">4</span>
 		</div>
-		<div class="pss">
+		<div class="pssmotor">
 			<a ><img src="../img/bike.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -150,7 +150,7 @@
 		<div class="section" id="p5">
 			<span class="name">5</span>
 		</div>
-		<div class="pss">
+		<div class="pssmotor">
 			<a ><img src="../img/bike.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -181,7 +181,7 @@
 		<div class="section" id="p6">
 			<span class="name">6</span>
 		</div>
-		<div class="pss">
+		<div class="pssmotor">
 			<a ><img src="../img/bike.jpg"></a>
 		</div>		
 		<div class="btext">
@@ -212,7 +212,7 @@
 		<div class="section" id="p7">
 			<span class="name">7</span>
 		</div>
-		<div class="pss">
+		<div class="pssmotor">
 			<a ><img src="../img/bike.jpg"></a>
 		</div>
 		<div class="btext">
@@ -242,7 +242,7 @@
 		<div class="section" id="p8">
 			<span class="name">8</span>
 		</div>
-		<div class="pss">
+		<div class="pssmotor">
 			<a ><img src="../img/bike.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -272,7 +272,7 @@
 		<div class="section" id="p9">
 			<span class="name">9</span>
 		</div>
-		<div class="pss">
+		<div class="pssmotor">
 			<a ><img src="../img/bike.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -303,7 +303,7 @@
 		<div class="section" id="p10">
 			<span class="name">10</span>
 		</div>
-		<div class="pss">
+		<div class="pssmotor">
 			<a ><img src="../img/bike.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -332,7 +332,7 @@
 		<div class="section" id="p11">
 			<span class="name">11</span>
 		</div>
-		<div class="pss">
+		<div class="pssmotor">
 			<a ><img src="../img/bike.jpg"></a>
 		</div>
 		<div class="btext">
@@ -362,7 +362,7 @@
 		<div class="section" id="p12">
 			<span class="name">12</span>
 		</div>
-		<div class="pss">
+		<div class="pssmotor">
 			<a ><img src="../img/bike.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -391,7 +391,7 @@
 		<div class="section" id="p13">
 			<span class="name">13</span>
 		</div>
-		<div class="pss">
+		<div class="pssmotor">
 			<a ><img src="../img/bike.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -420,7 +420,7 @@
 		<div class="section" id="p14">
 			<span class="name">14</span>
 		</div>
-		<div class="pss">
+		<div class="pssmotor">
 			<a ><img src="../img/bike.jpg"></a>
 		</div>
 		<div class="btext">
@@ -450,7 +450,7 @@
 		<div class="section" id="p15">
 			<span class="name">15</span>
 		</div>
-		<div class="pss">
+		<div class="pssmotor">
 			<a ><img src="../img/bike.jpg"></a>
 		</div>	
 		<div class="btext">
