--- a/K53_Book_Test/bookc_lightvehicle_test.html
+++ b/K53_Book_Test/bookc_lightvehicle_test.html
@@ -1844,7 +1844,7 @@
 			<span class="name">61 </span>
 		</div>
 
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="./motorcycle_booka_img/ma-61.jpg"></a>
 		</div>	
 				<div class="btext">
@@ -1872,7 +1872,7 @@
 			<span class="name">62 </span>
 		</div>
 
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="./motorcycle_booka_img/ma-61.jpg"></a>
 		</div>	
 				<div class="btext">
@@ -1899,7 +1899,7 @@
 			<span class="name">63 </span>
 		</div>
 
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="./motorcycle_booka_img/ma-61.jpg"></a>
 		</div>	
 				<div class="btext">
@@ -1925,7 +1925,7 @@
 			<span class="name">64 </span>
 		</div>
 
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="./motorcycle_booka_img/ma-61.jpg"></a>
 		</div>		
 		<div class="btext">
@@ -1957,7 +1957,7 @@
 			<span class="name">65 </span>
 		</div>
 
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="./motorcycle_booka_img/ma-61.jpg"></a>
 		</div>
 		<div class="btext">
@@ -1988,7 +1988,7 @@
 			<span class="name">66 </span>
 		</div>
 
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="./motorcycle_booka_img/ma-61.jpg"></a>
 		</div>
 		<div class="btext">
@@ -2019,7 +2019,7 @@
 			<span class="name">67 </span>
 		</div>
 
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="./motorcycle_booka_img/ma-61.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -2051,7 +2051,7 @@
 			<span class="name">68 </span>
 		</div>
 
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="./motorcycle_booka_img/ma-61.jpg"></a>
 		</div>	
 		<div class="btext">
