--- a/K53_Learners_Test/a_lightvehicle_test.html
+++ b/K53_Learners_Test/a_lightvehicle_test.html
@@ -1843,7 +1843,7 @@
 			<span class="name">61 </span>
 		</div>
 
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="./lightvehicle_booka_img/61.jpg"></a>
 		</div>	
 				<div class="btext">
@@ -1871,7 +1871,7 @@
 			<span class="name">62 </span>
 		</div>
 
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="./lightvehicle_booka_img/61.jpg"></a>
 		</div>	
 				<div class="btext">
@@ -1898,7 +1898,7 @@
 			<span class="name">63 </span>
 		</div>
 
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="./lightvehicle_booka_img/61.jpg"></a>
 		</div>	
 				<div class="btext">
@@ -1924,7 +1924,7 @@
 			<span class="name">64 </span>
 		</div>
 
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="./lightvehicle_booka_img/61.jpg"></a>
 		</div>		
 		<div class="btext">
@@ -1956,7 +1956,7 @@
 			<span class="name">65 </span>
 		</div>
 
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="./lightvehicle_booka_img/61.jpg"></a>
 		</div>
 		<div class="btext">
@@ -1987,7 +1987,7 @@
 			<span class="name">66 </span>
 		</div>
 
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="./lightvehicle_booka_img/61.jpg"></a>
 		</div>
 		<div class="btext">
@@ -2018,7 +2018,7 @@
 			<span class="name">67 </span>
 		</div>
 
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="./lightvehicle_booka_img/61.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -2049,7 +2049,7 @@
 			<span class="name">68 </span>
 		</div>
 
-		<div class="pss">
+		<div class="psscontrols">
 			<a ><img src="./lightvehicle_booka_img/61.jpg"></a>
 		</div>	
 		<div class="btext">
