--- a/K53_Learners_Test/a_motorcycle_test.html
+++ b/K53_Learners_Test/a_motorcycle_test.html
@@ -1897,7 +1897,7 @@
 			<span class="name">63 </span>
 		</div>
 
-		<div class="pss">
+		<div class="pssmotor">
 			<a ><img src="./motorcycle_booka_img/61.jpg"></a>
 		</div>	
 				<div class="btext">
@@ -1923,7 +1923,7 @@
 			<span class="name">64 </span>
 		</div>
 
-		<div class="pss">
+		<div class="pssmotor">
 			<a ><img src="./motorcycle_booka_img/61.jpg"></a>
 		</div>		
 		<div class="btext">
@@ -1955,7 +1955,7 @@
 			<span class="name">65 </span>
 		</div>
 
-		<div class="pss">
+		<div class="pssmotor">
 			<a ><img src="./motorcycle_booka_img/61.jpg"></a>
 		</div>
 		<div class="btext">
@@ -1986,7 +1986,7 @@
 			<span class="name">66 </span>
 		</div>
 
-		<div class="pss">
+		<div class="pssmotor">
 			<a ><img src="./motorcycle_booka_img/61.jpg"></a>
 		</div>
 		<div class="btext">
@@ -2017,7 +2017,7 @@
 			<span class="name">67 </span>
 		</div>
 
-		<div class="pss">
+		<div class="pssmotor">
 			<a ><img src="./motorcycle_booka_img/61.jpg"></a>
 		</div>	
 		<div class="btext">
@@ -2048,7 +2048,7 @@
 			<span class="name">68 </span>
 		</div>
 
-		<div class="pss">
+		<div class="pssmotor">
 			<a ><img src="./motorcycle_booka_img/61.jpg"></a>
 		</div>	
 		<div class="btext">
