--- a/home_images/share.html
+++ b/home_images/share.html
@@ -34,25 +34,25 @@
         <br>
 
 		         <div class="pssshare">
-			<a target="_blank" href="https://api.whatsapp.com/send?phone=&text=https://mmbhobho.github.io/K53/"><img src="../img/whatsapp1.png"></a>
+			<a target="_blank" href="https://api.whatsapp.com/send?phone=&text=https://k53-sa.com/"><img src="../img/whatsapp1.png"></a>
 			
 		</div>
 
 
   
           <div class="pssshare">
-			<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=mmbhobho.github.io/K53/"><img src="../img/facebook.png"></a>
+			<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://k53-sa.com/"><img src="../img/facebook.png"></a>
 			
 		</div>
 
 
 		         <div class="pssshare">
-			<a target="_blank" href="https://twitter.com/intent/tweet?url=https://mmbhobho.github.io/K53/"><img src="../img/twitter.png"></a>
+			<a target="_blank" href="https://twitter.com/intent/tweet?url=https://k53-sa.com/"><img src="../img/twitter.png"></a>
 			
 		</div>
 
 		         <div class="pssshare">
-			<a target="_blank" href="https://www.linkedin.com/sharing/share-offsite/?url=https://mmbhobho.github.io/K53/"><img src="../img/linkedin.png"></a>
+			<a target="_blank" href="https://www.linkedin.com/sharing/share-offsite/?url=https://k53-sa.com/"><img src="../img/linkedin.png"></a>
 			
 		</div> 
  
