--- a/home_images/share.html
+++ b/home_images/share.html
@@ -6,10 +6,6 @@
 	<title>K53-SA</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta property="og:title" content="FREE K53-South Africa!. Kindly forwad to everyone without a drivers licence." />
-<meta property="og:description" content="FREE K53-South Africa!. Kindly forwad to everyone without a drivers licence." />
-<meta property="og:url" content="https://k53-sa.github.io/mm_bhobho/" />
-<meta property="og:image" href="../img/images.png" content="../img/images.png" />
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<link rel="shortcut icon" type="image/ico" href="../img/images.png">
 </head>
@@ -41,7 +37,7 @@
 
   
           <div class="pssshare">
-			<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://k53-sa.com/"><img src="../img/facebook.png"></a>
+			<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=k53-sa.com/"><img src="../img/facebook.png"></a>
 			
 		</div>
 
