--- a/K53_Rules_Test/road_rules_test1.html
+++ b/K53_Rules_Test/road_rules_test1.html
@@ -914,7 +914,7 @@
 			
 		</div>
 		<div class="box">
-			<a target="_blank" href="https://api.whatsapp.com/send?phone=&text=https://k53-sa.com/"><img src="../img/whatsapp1.png"></a>
+			<a target="_blank" href="https://api.whatsapp.com/send?phone=&text='Kindly send to everyone without a drivers licence'https://k53-sa.com/"><img src="../img/whatsapp1.png"></a>
 			
 		</div>
 		<div class="box">
