--- a/home_images/share.html
+++ b/home_images/share.html
@@ -30,7 +30,7 @@
         <br>
 
 		         <div class="pssshare">
-			<a target="_blank" href="https://api.whatsapp.com/send?phone=&text=https://k53-sa.com/"><img src="../img/whatsapp1.png"></a>
+			<a target="_blank" href="https://api.whatsapp.com/send?phone=&text='Kindly send to everyone without a drivers licence'https://k53-sa.com/"><img src="../img/whatsapp1.png"></a>
 			
 		</div>
 
