--- a/K53_Controls_Test/learn_motorcycle.html
+++ b/K53_Controls_Test/learn_motorcycle.html
@@ -6,19 +6,12 @@
 <head>
 	<title>K53-SA</title>
 	<meta charset="utf-8">
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123711353-2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'UA-123711353-2');
-</script>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<link rel="shortcut icon" type="image/ico" href="../img/images.png">
+	<link rel="manifest" href="manifest.json">
 </head>
 <body id="unique">
 	<header>
@@ -214,15 +207,32 @@
 		</div>
 		<div class="btext">
 			<a href="#p7" class="btn"> Back</a>
-			<a href="motorcycle_controls.html#p1" class="btn"> Test...</a>  			
+			<a href="#p9" class="btn"> Next...</a>  			
         </div>
     	</div>
 			
+
+
+
+		<div class="section" id="p9">
+			
+		
+		<div class="btextlearn">
+			<br>
+			<p> ADD TO HOMESCREEN .</p>
+		</div>
+
 		
 
+		<div  id='results8' style='text-align: center; margin-top: 20px;'>
+	    <button  name='skipSubmit' type='submit' id="butInstall">ADD</button>	
+        </div>
 
-
-
+		<div class="btext"  style='margin-top: 50px;'>
+			<a href="#p8" class="btn"> Back</a>
+			<a href="motorcycle_controls.html#p1" class="btn"> Test...</a>  			
+        </div>
+    	</div>
 
 
 
@@ -274,30 +284,7 @@
 </html>
 
 
-<script type="text/javascript" src="js/jquery-3.4.1.js"></script>
-<script type="text/javascript">
-	var time = 10;
-	
 
-		
-		while( time <= 300)
-		{
-			time++;
-				$.ajax({
-				url:"learn_motor_controls.php",
-				method:"post",
-				data:{nm:time},
-				success: function(res){
-					console.log(res);
-					
-				}
-			})		
-		}
-
-
-	
-
-</script>
  <script type="text/javascript">
  	var lastScrollTop = 0;
  	navbar = document.getElementById("navbar");
@@ -312,3 +299,56 @@
  		lastScrollTop = scrollTop;
  	})
  </script>
+
+ 
+<script type="text/javascript">
+    const butInstall = document.getElementById('butInstall');
+
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', function() {
+    navigator.serviceWorker.register('sw.js').then(function(registration) {
+      // Registration was successful
+      console.log('ServiceWorker registration successful with scope: ', registration.scope);
+    }, function(err) {
+      // registration failed :(
+      console.log('ServiceWorker registration failed: ', err);
+    });
+  });
+}
+
+let deferredPrompt;
+
+window.addEventListener('beforeinstallprompt', (event) => {
+  console.log('👍', 'beforeinstallprompt', event);
+  // Stash the event so it can be triggered later.
+  window.deferredPrompt = event;
+
+});
+
+butInstall.addEventListener('click', () => {
+  console.log('👍', 'butInstall-clicked');
+  const promptEvent = window.deferredPrompt;
+  if (!promptEvent) {
+    // The deferred prompt isn't available.
+    return;
+  }
+  // Show the install prompt.
+  promptEvent.prompt();
+  // Log the result
+  promptEvent.userChoice.then((result) => {
+    console.log('👍', 'userChoice', result);
+    // Reset the deferred prompt variable, since
+    // prompt() can only be called once.
+    window.deferredPrompt = null;
+
+  });
+});
+
+
+
+window.addEventListener('appinstalled', (event) => {
+  console.log('👍', 'appinstalled', event);
+});
+
+
+</script>
