--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!--<link rel="stylesheet" type="text/css" href="./css/style.css">-->
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" type="image/ico" href="./img/images.png">
+    <link rel="manifest" href="manifest.json">
+   
 
 </head>
 <body>
@@ -42,4 +44,51 @@
                     }, 3000);
                 
                 document.getElementById("snackbars").innerHTML = "BETA version 1.0.0";
+</script>
+
+<script type="text/javascript">
+    
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', function() {
+    navigator.serviceWorker.register('sw.js').then(function(registration) {
+      // Registration was successful
+      console.log('ServiceWorker registration successful with scope: ', registration.scope);
+    }, function(err) {
+      // registration failed :(
+      console.log('ServiceWorker registration failed: ', err);
+    });
+  });
+}
+
+let deferredPrompt;
+
+window.addEventListener('beforeinstallprompt', (e) => {
+  // Prevent the mini-infobar from appearing on mobile
+  e.preventDefault();
+  // Stash the event so it can be triggered later.
+  deferredPrompt = e;
+  // Update UI notify the user they can install the PWA
+  showInstallPromotion();
+});
+
+buttonInstall.addEventListener('click', (e) => {
+  // Hide the app provided install promotion
+  hideMyInstallPromotion();
+  // Show the install prompt
+  deferredPrompt.prompt();
+  // Wait for the user to respond to the prompt
+  deferredPrompt.userChoice.then((choiceResult) => {
+    if (choiceResult.outcome === 'accepted') {
+      console.log('User accepted the install prompt');
+    } else {
+      console.log('User dismissed the install prompt');
+    }
+  })
+});
+
+
+
+
+
+
 </script>
