--- a/home_images/downloads.html
+++ b/home_images/downloads.html
@@ -1,4 +1,12 @@
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=231038998"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', '231038998');
+</script>
 
 <!DOCTYPE html>
 <html lang="en">
