--- a/K53_Controls_Test/learn_heavyvehicle.html
+++ b/K53_Controls_Test/learn_heavyvehicle.html
@@ -4,12 +4,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123711353-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-123711353-2');
+</script>
 	<title>K53-SA</title>
 	<meta charset="utf-8">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<link rel="shortcut icon" type="image/ico" href="../img/images.png">
+	<link rel="manifest" href="manifest.json">
 </head>
 <body id="unique">
 	<header>
@@ -270,7 +280,7 @@
 		</div>
 		<div class="btext">
 			<a href="#p10" class="btn"> Back</a>
-			<a href="heavy_vehicle_controls.html#p1" class="btn"> Test...</a>  			
+			<a href="#p12" class="btn"> Next...</a>  			
         </div>
     	</div>
 
@@ -279,8 +289,34 @@
 
 
 
+		<div class="section" id="p12">
+			
+		
+		<div class="btextlearn">
+			<br>
+			<p> ADD TO HOMESCREEN .</p>
+		</div>
+
+		
+
+		<div  id='results8' style='text-align: center; margin-top: 20px;'>
+	    <button  name='skipSubmit' type='submit' id="butInstall">ADD</button>	
+        </div>
 
 
+		<div class="btextlearn" style="margin-top: 50px;">
+			<br>
+			<p> iPhone iOS .</p>
+		</div>
+   		<div class="btextlearn" >
+			<br>
+			<video width="320" height="240" controls><source src="../img/ios.mp4" type="video/mp4"> Your browser does not support the video tag.</video>
+		</div>
+				<div class="btext"  style='margin-top: 50px;'>
+			<a href="#p11" class="btn"> Back</a>
+			<a href="heavy_vehicle_controls.html#p1" class="btn"> Test...</a>  			
+        </div>     
+    	</div>
 
 
 
@@ -317,30 +353,7 @@
 	</footer>
 </body>
 </html>
-<script type="text/javascript" src="js/jquery-3.4.1.js"></script>
-<script type="text/javascript">
-	var time = 10;
-	
 
-		
-		while( time <= 300)
-		{
-			time++;
-				$.ajax({
-				url:"learn_heavy_controls.php",
-				method:"post",
-				data:{nm:time},
-				success: function(res){
-					console.log(res);
-					
-				}
-			})		
-		}
-
-
-	
-
-</script>
  <script type="text/javascript">
  	var lastScrollTop = 0;
  	navbar = document.getElementById("navbar");
@@ -355,3 +368,56 @@
  		lastScrollTop = scrollTop;
  	})
  </script>
+
+
+ <script type="text/javascript">
+    const butInstall = document.getElementById('butInstall');
+
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', function() {
+    navigator.serviceWorker.register('sw.js').then(function(registration) {
+      // Registration was successful
+      console.log('ServiceWorker registration successful with scope: ', registration.scope);
+    }, function(err) {
+      // registration failed :(
+      console.log('ServiceWorker registration failed: ', err);
+    });
+  });
+}
+
+let deferredPrompt;
+
+window.addEventListener('beforeinstallprompt', (event) => {
+  console.log('👍', 'beforeinstallprompt', event);
+  // Stash the event so it can be triggered later.
+  window.deferredPrompt = event;
+
+});
+
+butInstall.addEventListener('click', () => {
+  console.log('👍', 'butInstall-clicked');
+  const promptEvent = window.deferredPrompt;
+  if (!promptEvent) {
+    // The deferred prompt isn't available.
+    return;
+  }
+  // Show the install prompt.
+  promptEvent.prompt();
+  // Log the result
+  promptEvent.userChoice.then((result) => {
+    console.log('👍', 'userChoice', result);
+    // Reset the deferred prompt variable, since
+    // prompt() can only be called once.
+    window.deferredPrompt = null;
+
+  });
+});
+
+
+
+window.addEventListener('appinstalled', (event) => {
+  console.log('👍', 'appinstalled', event);
+});
+
+
+</script>
