--- a/K53_Controls_Test/learn_motorcycle.html
+++ b/K53_Controls_Test/learn_motorcycle.html
@@ -4,6 +4,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123711353-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-123711353-2');
+</script>
 	<title>K53-SA</title>
 	<meta charset="utf-8">
 
@@ -228,11 +237,22 @@
 	    <button  name='skipSubmit' type='submit' id="butInstall">ADD</button>	
         </div>
 
-		<div class="btext"  style='margin-top: 50px;'>
+
+		<div class="btextlearn" style="margin-top: 50px;">
+			<br>
+			<p> iPhone iOS .</p>
+		</div>
+   		<div class="btextlearn" >
+			<br>
+			<video width="320" height="240" controls><source src="../img/ios.mp4" type="video/mp4"> Your browser does not support the video tag.</video>
+		</div>
+				<div class="btext"  style='margin-top: 50px;'>
 			<a href="#p8" class="btn"> Back</a>
 			<a href="motorcycle_controls.html#p1" class="btn"> Test...</a>  			
-        </div>
+        </div>     
     	</div>
+
+
 
 
 
