--- a/K53_Learners_Test/testcode.html
+++ b/K53_Learners_Test/testcode.html
@@ -1,19 +1,16 @@
-<?php 
-		date_default_timezone_set('Europe/Copenhagen');
-		include '../home_images/dbh.inc.php';
-		include '../home_images/comments.inc.php';
-		session_start();
-		
-if ($_SESSION['uid'] == "") {
-	header("Location: ../home_images/login.php");
-}	
-
- ?>
-
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123711353-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-123711353-2');
+</script>
 	<title>K53-SA</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
