--- a/home_images/k53-sa.html
+++ b/home_images/k53-sa.html
@@ -3,6 +3,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123711353-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-123711353-2');
+</script>
 	<title>K53-SA</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,7 +40,7 @@
 
 
 		<div class="psbb">
-			<a href="#p1"><img src="../img/me.jpg"></a>
+			<a href="https://api.whatsapp.com/send?phone=&text=🚨 FREE K53 📢 Kindly send to everyone without a drivers licence 🚗 https://k53-sa.com/"><img src="../img/me.jpg"></a>
 			<span class="mousetool" id="mousetool1">mm_bhobho</span>
 		</div>
 
