--- a/home_images/downloads.html
+++ b/home_images/downloads.html
@@ -1,16 +1,17 @@
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=231038998"></script>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123711353-2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', '231038998');
+  gtag('config', 'UA-123711353-2');
 </script>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
 	<title>K53-SA</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
