--- a/home_images/k53-sa.html
+++ b/home_images/k53-sa.html
@@ -40,7 +40,7 @@
 
 
 		<div class="psbb">
-			<a href="https://api.whatsapp.com/send?phone=&text=🚨 FREE K53 📢 Kindly send to everyone without a drivers licence 🚗 https://k53-sa.com/"><img src="../img/me.jpg"></a>
+			<a href="#"><img src="../img/me.jpg"></a>
 			<span class="mousetool" id="mousetool1">mm_bhobho</span>
 		</div>
 
