--- a/home_images/home.html
+++ b/home_images/home.html
@@ -3,6 +3,7 @@
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123711353-2"></script>
+<script data-ad-client="ca-pub-7523555661265068" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>	
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
