--- a/K53_Book_Test/index.html
+++ b/K53_Book_Test/index.html
@@ -24,10 +24,13 @@
 <body>
     <div id="particles-js">
         <div class="btext">
-            <h1>K53</h1>
-            <p>Learner's Test </p>
-            <p>Multiple Choice Questions</p>
-            <a href="./home_images/home.html" class="btn">Start...</a>
+            <p>Every time you click an advert on this site, you’re doing something powerful: helping young people across South Africa get their learner’s licenses completely free of charge.
+
+Your simple click is more than just support—it’s hope, opportunity, and freedom for youth who cannot afford these costs.
+
+Please click at least one advert every time you visit.
+Be proud knowing that with every click, you’re uplifting someone’s future. Thank you for standing with us to break the cycle of poverty, one license at a time.</p>
+            <a href="https://freek53.xyz/K53_Book_Test/book_test_code.html" class="btn">Start...</a>
         </div>
     </div>
 
