--- a/home_images/FAQs.html
+++ b/home_images/FAQs.html
@@ -151,7 +151,7 @@ signs and a book showing various road layouts and pictures of the controls of ve
 
 
 	<footer id="about-footer" style="margin-top: 800px;">
-		<p> mm_bhobho did this &copy  2020</p>
+		<p> FREEK53 NON PROFIT COMPANY &copy  2020</p>
 	</footer>
 </body>
 </html>
