--- a/K53_Controls_Test/learn_motorcycle.html
+++ b/K53_Controls_Test/learn_motorcycle.html
@@ -1,6 +1,3 @@
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -236,20 +233,7 @@
 		<div  id='results8' style='text-align: center; margin-top: 20px;'>
 	    <button  name='skipSubmit' type='submit' id="butInstall">ADD</button>	
         </div>
-
-
-		<div class="btextlearn" style="margin-top: 50px;">
-			<br>
-			<p> iPhone iOS .</p>
-		</div>
-   		<div class="btextlearn" >
-			<br>
-			<video width="320" height="240" controls><source src="../img/ios.mp4" type="video/mp4"> Your browser does not support the video tag.</video>
-		</div>
-				<div class="btext"  style='margin-top: 50px;'>
-			<a href="#p8" class="btn"> Back</a>
-			<a href="motorcycle_controls.html#p1" class="btn"> Test...</a>  			
-        </div>     
+     
     	</div>
 
 
@@ -298,7 +282,7 @@
 
 
 	<footer id="about-footer" style="margin-top: 500px;">
-		<p> mm_bhobho did this &copy  2020</p>
+		<p> FREEK53 NON PROFIT COMPANY &copy  2020</p>
 	</footer>
 </body>
 </html>
