--- a/K53_Learners_Test/_testcode.html
+++ b/K53_Learners_Test/_testcode.html
@@ -34,6 +34,18 @@
         <p> TYPE OF LEARNER'S LICENCE CODES
 </p>
 		<br>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7523555661265068"
+     crossorigin="anonymous"></script>
+<!-- Moneymaker -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7523555661265068"
+     data-ad-slot="7351075048"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		<p>(1) Code 1 learner's licence</p>
 		<br>
 		<p style="margin-left: 20px;">
@@ -109,7 +121,7 @@ was passed. <br> <br>
 
 
 	<footer id="about-footer" style="margin-top: 800px;">
-		<p> mm_bhobho did this &copy  2020</p>
+		<p> FREEK53 NON PROFIT COMPANY &copy  2020</p>
 	</footer>
 </body>
 </html>
