--- a/K53_Rules_Test/_roadrules.html
+++ b/K53_Rules_Test/_roadrules.html
@@ -515,7 +515,7 @@ DRUGS</a>
 
 
 	<footer id="about-footer" style="margin-top: 800px;">
-		<p> mm_bhobho did this &copy  2020</p>
+		<p> FREEK53 NON PROFIT COMPANY &copy  2020</p>
 	</footer>
 </body>
 </html>
