--- a/K53_Rules_Test/roadrules.html
+++ b/K53_Rules_Test/roadrules.html
@@ -524,7 +524,7 @@ DRUGS</a>
 
 
 	<footer id="about-footer" style="margin-top: 800px;">
-		<p> mm_bhobho did this &copy  2020</p>
+		<p> FREEK53 NON PROFIT COMPANY &copy  2020</p>
 	</footer>
 </body>
 </html>
