--- a/K53_Rules_Test/vehicle_length_height_and_width.html
+++ b/K53_Rules_Test/vehicle_length_height_and_width.html
@@ -79,7 +79,7 @@
 
 
 	<footer id="about-footer" style="margin-top: 500px;">
-		<p> mm_bhobho did this &copy  2020</p>
+		<p> FREEK53 NON PROFIT COMPANY &copy  2020</p>
 	</footer>
 </body>
 </html>
