--- a/K53_Book_Test/lightvehicle_book_tests.html
+++ b/K53_Book_Test/lightvehicle_book_tests.html
@@ -44,7 +44,7 @@
 		</div>
 
 		<div class="btext">
-			<a href="bookb_lightvehicle_test.html" id="1" class="btn">Book B</a>
+			<a href="../K53_Learners_Test/b_lightvehicle_test.html" id="1" class="btn">Book B</a>
 		</div>
 
 		<div class="btext">
@@ -52,13 +52,25 @@
 		</div>
 
 		<div class="btext">
-			<a href="../K53_Learners_Test/b_lightvehicle_test.html" id="3" class="btn">Book D</a>
+			<a href="bookb_lightvehicle_test.html" id="3" class="btn">Book D</a>
 		</div>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7523555661265068"
+     crossorigin="anonymous"></script>
+<!-- Moneymaker -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7523555661265068"
+     data-ad-slot="7351075048"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 	</div>
 
 
 	<footer id="about-footer" style="margin-top: 500px;">
-		<p> mm_bhobho did this &copy  2020</p>
+		<p> FREEK53 NON PROFIT COMPANY &copy  2020</p>
 	</footer>
 </body>
 </html>
