--- a/K53_Book_Test/_testcode.html
+++ b/K53_Book_Test/_testcode.html
@@ -109,7 +109,7 @@ was passed. <br> <br>
 
 
 	<footer id="about-footer" style="margin-top: 800px;">
-		<p> mm_bhobho did this &copy  2020</p>
+		<p> FREEK53 NON PROFIT COMPANY &copy  2020</p>
 	</footer>
 </body>
 </html>
