--- a/K53_Book_Test/book_test_code.html
+++ b/K53_Book_Test/book_test_code.html
@@ -57,11 +57,23 @@
 		<div class="ps">
 			<a href="heavyvehicle_book_tests.html"><img src="../img/truck.png"></a>
 		</div>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7523555661265068"
+     crossorigin="anonymous"></script>
+<!-- Moneymaker -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7523555661265068"
+     data-ad-slot="7351075048"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		</div>
 
 
 	<footer id="about-footer" style="margin-top: 350px;">
-		<p> mm_bhobho did this &copy  2020</p>
+		<p> FREEK53 NON PROFIT COMPANY &copy  2020</p>
 	</footer>
 </body>
 </html>
