--- a/K53_Sign_Test/_guidance.html
+++ b/K53_Sign_Test/_guidance.html
@@ -87,7 +87,7 @@
 
 
 	<footer id="about-footer" style="margin-top: 800px;">
-		<p> mm_bhobho did this &copy  2020</p>
+		<p> FREEK53 NON PROFIT COMPANY &copy  2020</p>
 	</footer>
 </body>
 </html>
