--- a/K53_Sign_Test/road_sign_tests.html
+++ b/K53_Sign_Test/road_sign_tests.html
@@ -61,12 +61,24 @@
 		<div class="btext">
 			<a href="road_sign_test6.html" id="5" class="btn">Test 6</a>
 		</div>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7523555661265068"
+     crossorigin="anonymous"></script>
+<!-- Moneymaker -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7523555661265068"
+     data-ad-slot="7351075048"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 	</div>
 
 
 	<footer id="about-footer" style="margin-top: 500px;">
-		<p> mm_bhobho did this &copy  2020</p>
+		<p> FREEK53 NON PROFIT COMPANY &copy  2020</p>
 	</footer>
 </body>
 </html>
