--- a/K53_Sign_Test/road_sign_tests.html
+++ b/K53_Sign_Test/road_sign_tests.html
@@ -61,6 +61,22 @@
 		<div class="btext">
 			<a href="road_sign_test6.html" id="5" class="btn">Test 6</a>
 		</div>
+
+		<div class="btext">
+			<a href="road_sign_test7.html" id="6" class="btn">Test 7</a>
+		</div>
+
+		<div class="btext">
+			<a href="road_sign_test8.html" id="7" class="btn">Test 8</a>
+		</div>
+
+		<div class="btext">
+			<a href="road_sign_test9.html" id="8" class="btn">Test 9</a>
+		</div>
+
+		<div class="btext">
+			<a href="road_sign_test10.html" id="9" class="btn">Test 10</a>
+		</div>
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7523555661265068"
      crossorigin="anonymous"></script>
 <!-- Moneymaker -->
@@ -97,4 +113,5 @@
  		}
  		lastScrollTop = scrollTop;
  	})
+
  </script>
