--- a/home_images/offline.html
+++ b/home_images/offline.html
@@ -12,21 +12,21 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Connect with Students | WhatsApp Contacts for University, College, TVET & High School</title>
-  <meta name="description" content="Find and share WhatsApp contacts with students from Universities, Colleges, TVETs, and High Schools. Join now to connect, chat, study, and build your student network.">
-  <meta name="keywords" content="university students, college students, TVET learners, high school WhatsApp groups, share WhatsApp contacts, student community, connect with students, study groups, student chat platform">
-  <meta name="Lisa&Lolo" content="status_viewers">
+   <title>FREEK53</title>
+  <meta name="description" content="FREE LEARNERS LICENCE TEST QUESTION AND ANSWERS MEMO">
+  <meta name="keywords" content="K53, LICENCE, LICENSE, MEMO, TEST, BLUE APP">
+  <meta name="FREEK53" content="FREEK53">
     <!--<link rel="stylesheet" type="text/css" href="./css/style.css">-->
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" type="image/ico" href="./img/images.png">
     <link rel="manifest" href="manifest.json">
 <link rel="manifest" href="/manifest.webmanifest">
-<meta name="theme-color" content="#25D366">
+<meta name="theme-color" content="#000">
 
 <!-- iOS support -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
-<link rel="apple-touch-icon" href="/icons/icon-192.png">
+<link rel="apple-touch-icon" href="icon-192.png">
 
    
 
@@ -35,7 +35,7 @@
     <div id="particles-js">
         <div class="btext">
             <h1>Welcome</h1>
-            <p>to status_viewers </p>
+            <p>FREEK53</p>
             <a href="login.php" class="btn">Start...</a>
         </div>
     </div>
@@ -121,3 +121,4 @@ buttonInstall.addEventListener('click', (e) => {
 
 
 </script>
+
