--- a/home_images/home.html
+++ b/home_images/home.html
@@ -14,8 +14,8 @@
 	<title>K53-SA</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
-	<link rel="shortcut icon" type="image/ico" href="../img/images.png">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="shortcut icon" type="image/ico" href="images.png">
 <!-- PWA install bits -->
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
@@ -188,4 +188,5 @@ if ('serviceWorker' in navigator) {
  				})
 	}
  </script>
+
 
