--- a/home_images/home.html
+++ b/home_images/home.html
@@ -20,8 +20,8 @@
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="theme-color" content="#000000">
-<link rel="manifest" href="/manifest.webmanifest">
-<link rel="apple-touch-icon" href="/images192.png">
+<link rel="manifest" href="manifest.webmanifest">
+<link rel="apple-touch-icon" href="images192.png">
 
 
 
@@ -151,6 +151,7 @@ if ('serviceWorker' in navigator) {
 	</footer>
 </body>
 </html>
+
 
 
 
