--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>K53-SA</title>
+    <title>FREEK53</title>
     <!--<link rel="stylesheet" type="text/css" href="./css/style.css">-->
   <!-- PWA basics -->
   <meta name="theme-color" content="#000000" />
@@ -34,11 +34,7 @@
             <p>Multiple Choice Questions</p>
             <a href="./home_images/home.html" class="btn">Start...</a>
         </div>
-  <div id="installBanner" style=" position:fixed; bottom:16px; left:16px; right:16px; padding:12px; background:#111; color:#fff; border-radius:8px; z-index:9999;">
-    <span>Install FREEK53 for faster offline use?</span>
-    <button id="installBtn" style="margin-left:12px; padding:6px 12px;">Install</button>
-    <button id="installClose" style="margin-left:8px; padding:6px 12px;">Not now</button>
-  </div>
+
     </div>
   <!-- Install banner (hidden by default) -->
 
@@ -96,6 +92,7 @@
 
   installClose.addEventListener('click', hideMyInstallPromotion);
 </script>
+
 
 
 
